--- a/package.json
+++ b/package.json
@@ -3,22 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "10.x",
-    "npm": "6.x"
+    "node": "10.x"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
-    "highcharts": "^8.0.0",
-    "js-cookie": "^2.2.1",
-    "node-sass": "^4.13.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-highcharts": "^16.1.0",
-    "react-router-dom": "^5.1.2",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.4.0",
+    "@testing-library/user-event": "7.2.1",
+    "highcharts": "8.0.0",
+    "js-cookie": "2.2.1",
+    "node-sass": "4.13.0",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-highcharts": "16.1.0",
+    "react-router-dom": "5.1.2",
     "react-scripts": "3.3.0",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,10 +42,10 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@storybook/addon-actions": "^5.2.8",
-    "@storybook/addon-links": "^5.2.8",
-    "@storybook/react": "^5.2.8",
-    "babel-loader": "^8.0.6"
+    "@babel/core": "7.7.7",
+    "@storybook/addon-actions": "5.2.8",
+    "@storybook/addon-links": "5.2.8",
+    "@storybook/react": "5.2.8",
+    "babel-loader": "8.0.6"
   }
 }
